Enable memory monitoring when tests are running
Signed-off-by: dezhliao <dezhi.liao@amd.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ on:
       linux_use_prebuilt_artifacts:
         type: boolean
         description: "If enabled, the CI will pull Linux artifacts using artifact_run_id and only run tests"
+      monitor_interval:
+        type: string
+        description: "Memory monitoring interval in seconds"
+        default: "30"
       windows_amdgpu_families:
         type: string
         description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
@@ -98,6 +102,7 @@ jobs:
       rocm_package_version: ${{ needs.setup.outputs.rocm_package_version }}
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
+      monitor_interval: ${{ inputs.monitor_interval || '30' }}
     permissions:
       contents: read
       id-token: write
@@ -129,6 +134,7 @@ jobs:
       rocm_package_version: ${{ needs.setup.outputs.rocm_package_version }}
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
+      monitor_interval: ${{ inputs.monitor_interval || '30' }}
     permissions:
       contents: read
       id-token: write
