Add S3 bucket override support for external org workflows
This commit extends TheRock's workflow_call CI infrastructure to support
GitHub EMU repositories with custom S3 buckets, enabling external
organizations to use TheRock's build infrastructure while maintaining
separate artifact storage with different IAM permissions.

Key Changes:
- Added s3_bucket_override workflow input that propagates through the
  entire workflow chain (ci.yml â†’ setup.yml â†’ ci_linux/windows.yml â†’
  build/test workflows)
- Updated retrieve_bucket_info() to check THEROCK_S3_BUCKET_OVERRIDE
  environment variable before applying default bucket selection logic
- Added external repo support inputs to workflows (external_source_checkout,
  therock_ref, repository_override, projects) for consistency with
  planned rocm-libraries/rocm-systems integration
- Created test workflow (test_external_repo_integration.yml) to validate
  bucket override functionality
- Added comprehensive documentation (docs/external-org-workflow-integration.md)
  with setup instructions, examples, and security considerations

Workflow Chain:
1. EMU repo calls ci.yml with s3_bucket_override parameter
2. Parameter propagates as THEROCK_S3_BUCKET_OVERRIDE env var through
   all build and test jobs
3. Python scripts use overridden bucket for all artifact operations
4. No EMU repo names or details stored in TheRock codebase

Security Features:
- Bucket names passed via workflow inputs or GitHub secrets
- No hardcoded EMU repository information
- Separate S3 buckets with isolated IAM permissions
- OIDC-based AWS authentication

This change is backwards compatible - existing workflows without bucket
override continue to use default bucket selection logic.

Files Modified:
- .github/workflows/*.yml (10 workflow files)
- build_tools/github_actions/github_actions_utils.py
- docs/external-org-workflow-integration.md (new)

Related: External organization EMU repository integration

--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -48,6 +48,22 @@ on:
         type: boolean
       extra_cmake_options:
         type: string
+      external_source_checkout:
+        type: boolean
+        description: "Whether source is from external repo (rocm-libraries/systems/EMU)"
+        default: false
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
+      repository_override:
+        type: string
+        description: "Override github.repository for testing (e.g., 'ROCm/rocm-libraries')"
+        default: ""
+      s3_bucket_override:
+        type: string
+        default: ""
+        description: "Override S3 bucket for artifact storage (for EMU repos with different permissions)"
 
 permissions:
   contents: read
@@ -73,6 +89,7 @@ jobs:
       TEATIME_FORCE_INTERACTIVE: 0
       AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
       IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
+      THEROCK_S3_BUCKET_OVERRIDE: ${{ inputs.s3_bucket_override }}
     steps:
       - name: "Checking out repository"
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
