Disable LLVM JITLINK build which is on by default

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -71,6 +71,7 @@ if(THEROCK_ENABLE_COMPILER)
       -DCLANG_ENABLE_AMDCLANG=ON
       -DLLVM_INSTALL_TOOLCHAIN_ONLY=OFF
       -DLLVM_BUILD_LLVM_C_DYLIB=OFF
+      -DLLVM_TOOL_LLVM_JITLINK_BUILD=OFF
 
       # Clang features.
       -DCLANG_ENABLE_ARCMT=OFF
