Disable building LLVM examples

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -72,6 +72,7 @@ if(THEROCK_ENABLE_COMPILER)
       -DLLVM_INSTALL_TOOLCHAIN_ONLY=OFF
       -DLLVM_BUILD_LLVM_C_DYLIB=OFF
       -DLLVM_TOOL_LLVM_JITLINK_BUILD=OFF
+      -DLLVM_BUILD_EXAMPLES=OFF
 
       # Clang features.
       -DCLANG_ENABLE_ARCMT=OFF
