--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -203,6 +203,24 @@ jobs:
         run: |
           python external-builds/pytorch/sanity_check_wheel.py ${{ env.PACKAGE_DIST_DIR }}/
 
+      - name: Generate PyTorch manifest
+        run: |
+          VERSION_SUFFIX="${ROCM_VERSION_SUFFIX:-}"
+          python external-builds/pytorch/generate_pytorch_manifest.py \
+            --output-dir "${{ env.PACKAGE_DIST_DIR }}" \
+            --manifest-dir "${{ env.PACKAGE_DIST_DIR }}/manifests" \
+            --artifact-group "pytorch-wheels" \
+            --rocm-sdk-version "${{ inputs.rocm_version }}" \
+            --amdgpu-family "${{ inputs.amdgpu_family }}" \
+            --version-suffix "${VERSION_SUFFIX}" \
+            --pytorch-git-ref "${{ inputs.pytorch_git_ref }}" \
+            --python-version "${{ inputs.python_version }}" \
+            --pytorch-rocm-arch "${PYTORCH_ROCM_ARCH}" \
+            --pytorch-dir "${{ github.workspace }}/external-builds/pytorch/pytorch" \
+            --pytorch-audio-dir "${{ github.workspace }}/external-builds/pytorch/pytorch_audio" \
+            --pytorch-vision-dir "${{ github.workspace }}/external-builds/pytorch/pytorch_vision" \
+            --triton-dir "${{ github.workspace }}/external-builds/pytorch/triton"
+
       - name: Configure AWS Credentials
         if: always()
         uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
