--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -187,17 +187,14 @@ jobs:
         id: build-pytorch-wheels
         run: |
           echo "Building PyTorch wheels for ${{ inputs.amdgpu_family }}"
-          python ./external-builds/pytorch/build_prod_wheels.py \
+          ./external-builds/pytorch/build_prod_wheels.py \
             build \
             --install-rocm \
             --pip-cache-dir /tmp/pipcache \
             --index-url "${{ inputs.cloudfront_url }}/${{ inputs.amdgpu_family }}/" \
-            --pytorch-git-ref "${{ inputs.pytorch_git_ref }}" \
-            --python-version "${{ inputs.python_version }}" \
             --clean \
-            --output-dir "${{ env.PACKAGE_DIST_DIR }}" \
-            ${{ env.optional_build_prod_arguments }}
-          python ./build_tools/github_actions/write_torch_versions.py --dist-dir "${{ env.PACKAGE_DIST_DIR }}"
+            --output-dir ${{ env.PACKAGE_DIST_DIR }} ${{ env.optional_build_prod_arguments }}
+          python ./build_tools/github_actions/write_torch_versions.py --dist-dir ${{ env.PACKAGE_DIST_DIR }}
 
       - name: Sanity Check Wheel
         run: |
