--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -107,6 +107,8 @@ jobs:
           --group-add video
           --user root
           --env-file /etc/podinfo/gha-gpu-isolation-settings
+          --dns 8.8.8.8
+          --dns 8.8.4.4
     defaults:
       run:
         shell: bash
@@ -180,21 +182,21 @@ jobs:
 
       - name: Install JAX wheels from package index
         run: |
-          nslookup rocm.devreleases.amd.com || true
           curl -I https://rocm.devreleases.amd.com/v2-staging/gfx94X-dcgpu/jaxlib/ || true
           # Install jaxlib/plugin/pjrt from the GPU-family index; install jax from PyPI to match the version
-          echo "WHEEL_INDEX_URL=${WHEEL_INDEX_URL}"
-          echo "JAX_VERSION=${JAX_VERSION}"
+          echo "WHEEL_INDEX_URL=${{ env.WHEEL_INDEX_URL }}"
+          echo "JAX_VERSION=${{ env.JAX_VERSION }}"
           echo "inputs.rocm_version=${{ inputs.rocm_version }}"
           echo "inputs.amdgpu_family=${{ inputs.amdgpu_family }}"
           echo "inputs.python_version=${{ inputs.python_version }}"
           which python
           python --version
-            pip install -v --index-url "${WHEEL_INDEX_URL}" \
-            "jaxlib==${JAX_VERSION}+rocm${{ inputs.rocm_version }}" \
-            "jax_rocm7_plugin==${JAX_VERSION}+rocm${{ inputs.rocm_version }}" \
-            "jax_rocm7_pjrt==${JAX_VERSION}+rocm${{ inputs.rocm_version }}"
-            pip install -v --extra-index-url https://pypi.org/simple "jax==${JAX_VERSION}"
+          pip install -vvv --extra-index-url https://pypi.org/simple "jax==${{ env.JAX_VERSION }}"
+          pip install -vvv --index-url "${{ env.WHEEL_INDEX_URL }}" \
+          "jaxlib==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}" \
+          "jax_rocm7_plugin==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}" \
+          "jax_rocm7_pjrt==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}"
+          
 
       - name: Run JAX tests
         run: |
