removing unnecessary amdsmi from build deps.

--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -94,14 +94,10 @@ endif()
 # hipBLASLt
 ##############################################################################
 
-set(hipBLASLt_optional_build_deps)
-set(hipBLASLt_optional_runtime_deps)
+set(hipBLASLt_optional_deps)
 if(NOT WIN32)
   # hipBLASLt is hard-coded to not expect rocm-smi and amdsmi on Windows.
-  list(APPEND hipBLASLt_optional_build_deps
-    amdsmi
-  )
-  list(APPEND hipBLASLt_optional_runtime_deps
+  list(APPEND hipBLASLt_optional_deps
     amdsmi
     rocm_smi_lib
   )
@@ -146,12 +142,11 @@ therock_cmake_subproject_declare(hipBLASLt
     therock-googletest
     therock-msgpack-cxx
     ${hipBLASLt_rocRoller_build_deps}
-    ${hipBLASLt_optional_build_deps}
   RUNTIME_DEPS
     hip-clr
     therock-host-blas
     ${hipBLASLt_rocRoller_runtime_deps}
-    ${hipBLASLt_optional_runtime_deps}
+    ${hipBLASLt_optional_deps}
     ${optional_profiler_deps}
 )
 therock_cmake_subproject_glob_c_sources(hipBLASLt
