debug segmentation fault for 1151

--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -251,7 +251,7 @@ jobs:
     uses: ./.github/workflows/test_pytorch_wheels.yml
     with:
       amdgpu_family: ${{ inputs.amdgpu_family }}
-      test_runs_on: ${{ needs.generate_target_to_run.outputs.test_runs_on }}
+      test_runs_on: linux-strix-halo-gpu-rocm-7
       package_index_url: ${{ inputs.cloudfront_staging_url }}
       python_version: ${{ inputs.python_version }}
       torch_version: ${{ needs.build_pytorch_wheels.outputs.torch_version }}
