--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -179,32 +179,20 @@ jobs:
           JAX_VERSION=$(tr -d ' ' < jax/build/requirements.txt \
           | grep -E '^(jax|jaxlib)==[^#]+' | head -n1 | cut -d'=' -f3)
           echo "JAX_VERSION=$JAX_VERSION" >> "$GITHUB_ENV"
+          echo "PACKAGE_VERSION=${JAX_VERSION}+rocm${{ inputs.rocm_version }}" >> "$GITHUB_ENV"
 
       - name: Install JAX wheels from package index
         run: |
-          # Fix DNS issues in GitHub Actions
-          sudo bash -c 'echo "nameserver 8.8.8.8" > /etc/resolv.conf'
-          sudo bash -c 'echo "nameserver 8.8.4.4" >> /etc/resolv.conf'
-          # Wait a moment for DNS to settle
-          sleep 2
-          curl -I https://rocm.devreleases.amd.com/v2-staging/gfx94X-dcgpu/jaxlib/ || true
           # Install jaxlib/plugin/pjrt from the GPU-family index; install jax from PyPI to match the version
-          echo "WHEEL_INDEX_URL=${{ env.WHEEL_INDEX_URL }}"
-          echo "JAX_VERSION=${{ env.JAX_VERSION }}"
-          echo "inputs.rocm_version=${{ inputs.rocm_version }}"
-          echo "inputs.amdgpu_family=${{ inputs.amdgpu_family }}"
-          echo "inputs.python_version=${{ inputs.python_version }}"
-          which python
-          python --version
           pip install -vvv --index-url "${{ env.WHEEL_INDEX_URL }}" \
-            "jaxlib==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}" \
-            "jax_rocm7_plugin==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}" \
-            "jax_rocm7_pjrt==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}"
+          "jaxlib==${{ env.PACKAGE_VERSION }}" \
+          "jax_rocm7_plugin==${{ env.PACKAGE_VERSION }}" \
+          "jax_rocm7_pjrt==${{ env.PACKAGE_VERSION }}"
           pip install -vvv --extra-index-url https://pypi.org/simple "jax==${{ env.JAX_VERSION }}"
           
       - name: Run JAX tests
         run: |
-            pytest jax/jax_tests/tests/multi_device_test.py -q --log-cli-level=INFO
-            pytest jax/jax_tests/tests/core_test.py -q --log-cli-level=INFO
-            pytest jax/jax_tests/tests/util_test.py -q --log-cli-level=INFO
-            pytest jax/jax_tests/tests/scipy_stats_test.py -q --log-cli-level=INFO
+          pytest jax/jax_tests/tests/multi_device_test.py -q --log-cli-level=INFO
+          pytest jax/jax_tests/tests/core_test.py -q --log-cli-level=INFO
+          pytest jax/jax_tests/tests/util_test.py -q --log-cli-level=INFO
+          pytest jax/jax_tests/tests/scipy_stats_test.py -q --log-cli-level=INFO
