Option-selectable AOMP build configuration
At present, the AOMP build infrastructure patches these scripts in order
to adjust configuration settings appropriately for "AOMP-like" builds.
This WIP patch allows the alternate options to be selectable with new
CMake options instead, which should be a little more robust.

The changes are mostly adapted from
https://github.com/ROCm/aomp/blob/aomp-dev/srock-bin/patches/amd-staging/_TheRock.patch.

I noticed a bit of crossover on rebasing, so the options might want
tweaking a bit.

At the moment the new settings are:

 * THEROCK_AOMP_BUILD: Enable AOMP build configuration settings.

 * THEROCK_AOMP_VERSION_MOD: Set patch version name for AOMP build.

 * THEROCK_DEFAULT_LLVM_TOOLSET: Build default set of LLVM tools
   (vs. TheRock subset).

 * THEROCK_DEFAULT_CLANG_TOOLSET: Build default set of Clang tools
   (vs. TheRock subset).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,12 @@ therock_enable_external_source("composable-kernel" "${THEROCK_SOURCE_DIR}/ml-lib
 # Overall build settings.
 option(THEROCK_VERBOSE "Enables verbose CMake statuses" OFF)
 
+# AOMP-related options.
+set(THEROCK_AOMP_BUILD OFF CACHE BOOL "Enable AOMP build configuration settings")
+set(THEROCK_AOMP_VERSION_MOD "" CACHE STRING "Set patch version name for AOMP build")
+set(THEROCK_DEFAULT_LLVM_TOOLSET OFF CACHE BOOL "Build default set of LLVM tools (vs. TheRock subset)")
+set(THEROCK_DEFAULT_CLANG_TOOLSET OFF CACHE BOOL "Build default set of Clang tools (vs. TheRock subset)")
+
 # Initialize the install directory.
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set(CMAKE_INSTALL_PREFIX "${THEROCK_SOURCE_DIR}/install" CACHE PATH "" FORCE)
