--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -126,7 +126,7 @@ jobs:
       - name: Detect external source configuration
         if: ${{ inputs.external_source_checkout }}
         id: detect
-        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}" --platform linux
+        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py --repository "${{ inputs.repository_override || github.repository }}" --platform linux
 
       # TODO: We shouldn't be using a cache on actual release branches, but it
       # really helps for iteration time.
@@ -233,6 +233,9 @@ jobs:
 
       - name: Post Build Upload
         if: always()
+        # For external repos we set the working directory to TheRock so the packaging/upload
+        # runs from the same repo root as internal CI. This keeps produced tarball layouts and
+        # paths consistent across internal vs external-source builds.
         working-directory: ${{ inputs.external_source_checkout && env.THEROCK_DIR || '.' }}
         run: |
           python3 ./build_tools/github_actions/post_build_upload.py \
