--- a/build_tools/github_actions/test_executable_scripts/hipdnn_install_tests/test_template.cpp.in
+++ b/build_tools/github_actions/test_executable_scripts/hipdnn_install_tests/test_template.cpp.in
@@ -1,11 +1,10 @@
 // Copyright (c) Advanced Micro Devices, Inc.
 // SPDX-License-Identifier: MIT
 
-#include <hipdnn_backend.h>
+#include <@header@>
 #include <iostream>
 
 int main() {
-  std::cout << "hipdnn_backend: package found and linked successfully"
-            << std::endl;
+  std::cout << "@pkg_name@: package found and linked successfully" << std::endl;
   return 0;
 }
