--- a/.github/workflows/ci_asan.yml
+++ b/.github/workflows/ci_asan.yml
@@ -16,6 +16,9 @@ on:
         type: string
         description: "If provided, the tests will run on this artifact ID"
         default: ""
+  pull_request:
+    types:
+      - labeled
 
 permissions:
   contents: read
