Refactor function and add arg

--- a/build_tools/github_actions/test_executable_scripts/hipdnn_install_tests/CMakeLists.txt
+++ b/build_tools/github_actions/test_executable_scripts/hipdnn_install_tests/CMakeLists.txt
@@ -7,31 +7,27 @@ set(CMAKE_CXX_STANDARD 17)
 
 enable_testing()
 
-# Define tests: package_name:header:test_suffix
-set(HIPDNN_PACKAGES
-    "hipdnn_backend:hipdnn_backend.h:backend"
-    "hipdnn_data_sdk:hipdnn_data_sdk/data_objects/data_types_generated.h:data_sdk"
-    "hipdnn_frontend:hipdnn_frontend.hpp:frontend"
-    "hipdnn_plugin_sdk:hipdnn_plugin_sdk/PluginApi.h:plugin_sdk"
-    "hipdnn_test_sdk:hipdnn_test_sdk/utilities/LoggingUtils.hpp:test_sdk"
-)
+function(add_hipdnn_install_test)
+    cmake_parse_arguments(ARG "" "PACKAGE;HEADER" "" ${ARGN})
 
-foreach(entry IN LISTS HIPDNN_PACKAGES)
-    string(REPLACE ":" ";" parts "${entry}")
-    list(GET parts 0 pkg_name)
-    list(GET parts 1 header)
-    list(GET parts 2 test_suffix)
+    find_package(${ARG_PACKAGE} CONFIG REQUIRED)
+    message(STATUS "${ARG_PACKAGE} found")
 
-    find_package(${pkg_name} CONFIG REQUIRED)
-    message(STATUS "${pkg_name} found")
-
-    set(test_name "test_${test_suffix}")
+    set(test_name "test_${ARG_PACKAGE}")
+    set(header "${ARG_HEADER}")
+    set(pkg_name "${ARG_PACKAGE}")
     configure_file(
         "${CMAKE_CURRENT_SOURCE_DIR}/test_template.cpp.in"
         "${CMAKE_CURRENT_BINARY_DIR}/${test_name}.cpp"
         @ONLY
     )
     add_executable(${test_name} "${CMAKE_CURRENT_BINARY_DIR}/${test_name}.cpp")
-    target_link_libraries(${test_name} PRIVATE ${pkg_name})
+    target_link_libraries(${test_name} PRIVATE ${ARG_PACKAGE})
     add_test(NAME ${test_name} COMMAND ${test_name})
-endforeach()
+endfunction()
+
+add_hipdnn_install_test(PACKAGE hipdnn_backend    HEADER hipdnn_backend.h)
+add_hipdnn_install_test(PACKAGE hipdnn_data_sdk   HEADER hipdnn_data_sdk/data_objects/graph_generated.h)
+add_hipdnn_install_test(PACKAGE hipdnn_frontend   HEADER hipdnn_frontend.hpp)
+add_hipdnn_install_test(PACKAGE hipdnn_plugin_sdk HEADER hipdnn_plugin_sdk/PluginApi.h)
+add_hipdnn_install_test(PACKAGE hipdnn_test_sdk   HEADER hipdnn_test_sdk/utilities/Seeds.hpp)
