--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -184,11 +184,11 @@ jobs:
       - name: Install JAX wheels from package index
         run: |
           # Install jaxlib/plugin/pjrt from the GPU-family index; install jax from PyPI to match the version
-          pip install -vvv --index-url "${{ env.WHEEL_INDEX_URL }}" \
+          pip install --index-url "${{ env.WHEEL_INDEX_URL }}" \
           "jaxlib==${{ env.PACKAGE_VERSION }}" \
           "jax_rocm7_plugin==${{ env.PACKAGE_VERSION }}" \
           "jax_rocm7_pjrt==${{ env.PACKAGE_VERSION }}"
-          pip install -vvv --extra-index-url https://pypi.org/simple "jax==${{ env.JAX_VERSION }}"
+          pip install jax==${{ env.JAX_VERSION }}
           
       - name: Run JAX tests
         run: |
