--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -263,24 +263,16 @@ jobs:
 
       - name: Upload PyTorch manifest to S3 artifacts
         if: ${{ github.repository_owner == 'ROCm' }}
-        shell: cmd
+        shell: bash
         run: |
-          set "PY=${{ inputs.python_version }}"
-          if "%PY:~0,2%"=="py" set "PY=%PY:~2%"
-          set "MANIFEST_NAME=therock-manifest_torch_py%PY%_${{ inputs.pytorch_git_ref }}.json"
-          set "MANIFEST_NAME=%MANIFEST_NAME:/=-%"
-          echo "Available manifest files:"
-          ls -l "${PACKAGE_DIST_DIR}/manifests" || dir "${PACKAGE_DIST_DIR}\manifests"
-
-          if not exist "${{ env.PACKAGE_DIST_DIR }}\manifests\%MANIFEST_NAME%" (
-            echo "ERROR: Manifest not found: %MANIFEST_NAME%"
-            dir "${{ env.PACKAGE_DIST_DIR }}\manifests"
-            exit /b 1
-          )
-
-          aws s3 cp ^
-            "${{ env.PACKAGE_DIST_DIR }}\manifests\%MANIFEST_NAME%" ^
-            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-windows/manifests/${{ inputs.amdgpu_family }}/%MANIFEST_NAME%"
+          python build_tools/github_actions/upload_pytorch_manifest.py \
+            --dist-dir "${{ env.PACKAGE_DIST_DIR }}" \
+            --bucket "${{ env.S3_BUCKET_ARTIFACTS }}" \
+            --run-id "${{ github.run_id }}" \
+            --platform windows \
+            --amdgpu-family "${{ inputs.amdgpu_family }}" \
+            --python-version "${{ inputs.python_version }}" \
+            --pytorch-git-ref "${{ inputs.pytorch_git_ref }}"
 
 
       - name: (Re-)Generate Python package release index for staging
