--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -229,20 +229,20 @@ jobs:
           python external-builds/pytorch/sanity_check_wheel.py ${{ env.PACKAGE_DIST_DIR }}
 
       - name: Generate PyTorch manifest
-        shell: cmd
+        shell: bash
         run: |
-          python external-builds/pytorch/generate_pytorch_manifest.py ^
-            --output-dir "${{ env.PACKAGE_DIST_DIR }}" ^
-            --manifest-dir "${{ env.PACKAGE_DIST_DIR }}\manifests" ^
-            --artifact-group "pytorch-wheels" ^
-            --rocm-sdk-version "${{ inputs.rocm_version }}" ^
-            --amdgpu-family "${{ inputs.amdgpu_family }}" ^
-            --pytorch-git-ref "${{ inputs.pytorch_git_ref }}" ^
-            --python-version "${{ inputs.python_version }}" ^
-            --pytorch-rocm-arch "%PYTORCH_ROCM_ARCH%" ^
-            --pytorch-dir "${{ env.CHECKOUT_ROOT }}/torch" ^
-            --pytorch-audio-dir "${{ env.CHECKOUT_ROOT }}/audio" ^
-            --pytorch-vision-dir "${{ env.CHECKOUT_ROOT }}/vision"
+          python external-builds/pytorch/generate_pytorch_manifest.py \
+            --output-dir "${PACKAGE_DIST_DIR}" \
+            --manifest-dir "${PACKAGE_DIST_DIR}/manifests" \
+            --artifact-group "pytorch-wheels" \
+            --rocm-sdk-version "${{ inputs.rocm_version }}" \
+            --amdgpu-family "${{ inputs.amdgpu_family }}" \
+            --pytorch-git-ref "${{ inputs.pytorch_git_ref }}" \
+            --python-version "${{ inputs.python_version }}" \
+            --pytorch-rocm-arch "${PYTORCH_ROCM_ARCH}" \
+            --pytorch-dir "${CHECKOUT_ROOT}/torch" \
+            --pytorch-audio-dir "${CHECKOUT_ROOT}/audio" \
+            --pytorch-vision-dir "${CHECKOUT_ROOT}/vision"
 
       - name: Configure AWS Credentials
         if: always()
