Fix a couple cmake warnings
In a couple cases we have if() blocks with conditions that don't match
their endif() blocks anymore, resulting in a dev warning.

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -249,5 +249,5 @@ if(THEROCK_ENABLE_ROCPROFV3)
         rocprofiler-sdk
         rocprofiler-systems
       )
-  endif(THEROCK_ENABLE_ROCPROFSYS)
+  endif(THEROCK_ENABLE_ROCPROFSYS AND THEROCK_SANITIZER STREQUAL "")
 endif(THEROCK_ENABLE_ROCPROFV3)
