--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -452,9 +452,8 @@ feature_group = "CORE"  # Part of core, enabled by default
 
 [artifacts.core-hiptests]
 artifact_group = "hip-runtime"
-type = "target-neutral"
+type = "target-specific"
 artifact_deps = ["core-hip"]
-feature_group = "CORE"  # Part of core, enabled by default
 
 # --- Math Libraries (per-arch) ---
 
