--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -454,6 +454,7 @@ feature_group = "CORE"  # Part of core, enabled by default
 artifact_group = "hip-runtime"
 type = "target-specific"
 artifact_deps = ["core-hip"]
+feature_group = "CORE"  # Part of core, enabled by default
 
 # --- Math Libraries (per-arch) ---
 
