Fix CI nightly, ASAN, and multi-arch workflows to pass inputs to setup.yml
These workflows were calling setup.yml but not forwarding their
workflow_dispatch inputs (linux_amdgpu_families, test_labels, etc).
This caused the setup job to use default empty values instead of
the user-provided inputs or the workflow's own defaults.

Forward all relevant inputs from workflow_dispatch to setup.yml's
workflow_call to fix this.

Affected workflows:
- ci_nightly.yml
- ci_asan.yml
- multi_arch_ci.yml

--- a/.github/workflows/ci_asan.yml
+++ b/.github/workflows/ci_asan.yml
@@ -33,6 +33,8 @@ jobs:
     uses: ./.github/workflows/setup.yml
     with:
       build_variant: "asan"
+      linux_amdgpu_families: ${{ inputs.linux_amdgpu_families || '' }}
+      linux_use_prebuilt_artifacts: ${{ inputs.linux_use_prebuilt_artifacts || false }}
 
   linux_build_and_test:
     name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
