--- a/.github/workflows/multi_arch_ci.yml
+++ b/.github/workflows/multi_arch_ci.yml
@@ -63,6 +63,12 @@ jobs:
     with:
       build_variant: "release"
       multi_arch: true
+      linux_amdgpu_families: ${{ inputs.linux_amdgpu_families || '' }}
+      linux_test_labels: ${{ inputs.linux_test_labels || '' }}
+      linux_use_prebuilt_artifacts: ${{ inputs.linux_use_prebuilt_artifacts || false }}
+      windows_amdgpu_families: ${{ inputs.windows_amdgpu_families || '' }}
+      windows_test_labels: ${{ inputs.windows_test_labels || '' }}
+      windows_use_prebuilt_artifacts: ${{ inputs.windows_use_prebuilt_artifacts || false }}
 
   linux_build_and_test:
     name: Linux::${{ matrix.variant.build_variant_label }}
