ci tester git config value writing improvements
Add safer way to write safe.directory fetch.parallel
config values on ci-test-runners. This is to try to
fix the .gitconfig file corruptions on that we have
noticed constantly on Windows runners.

Write the safe.directory and fetch.parallel values
to gitconfig if they have been changed.

In addition do not allow multiple key-value pairs for
directory keyword. This should help to avoid a following:

[safe]
	directory = B:/runner/_work/TheRock/TheRock
... repeated 500 times ...
	directory = B:/runner/_work/TheRock/TheRock
	directory = B:/runner/_work/TheRock/TheRock
	directory = B:/runner/_work/TheRock/TheRock

Fixes: https://github.com/ROCm/TheRock/issues/2929

Signed-off-by: Mika Laitio <mika.laitio@amd.com>

--- a/.github/workflows/test_component.yml
+++ b/.github/workflows/test_component.yml
@@ -94,8 +94,7 @@ jobs:
       # safe.directory must be set before Runner Health Status
       - name: Adjust git config
         run: |
-          git config --global --add safe.directory $PWD
-          git config fetch.parallel 10
+          python build_tools/test_ci_git_config_value_updater.py $PWD 10
 
       - name: Runner health status
         run: |
