Simplify external repo integration by consolidating checkout strategy
This change adopts a unified approach where TheRock is always checked out
first, with external repos (rocm-libraries, rocm-systems) checked out as
a second step and moved into their submodule locations by fetch_sources.py.

Design principles:
- Always work from TheRock's directory structure as the canonical layout
- Use environment variables (EXTERNAL_SOURCE_CHECKOUT, GITHUB_REPOSITORY_OVERRIDE)
  to signal external repo mode rather than conditional workflow paths
- Move repository-specific logic into Python scripts where it can be shared,
  tested, and reused across platforms
- Eliminate the need for workflows to know about DVC, patching, or CMake
  source directory variables - these are derived automatically

Benefits:
- Single checkout pattern for both TheRock and external repo builds
- Workflows are simpler and more maintainable (no per-repo conditionals)
- Python scripts handle auto-detection (DVC dirs, patch dirs, source paths)
- Easier to extend to additional external repos without workflow changes
- Test build_tools earlier in the pipeline for faster feedback

This replaces the previous dual-checkout approach that required different
working directories and explicit coordination between workflows and scripts.

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -90,30 +90,15 @@ jobs:
       windows_test_labels: ${{ steps.configure.outputs.windows_test_labels }}
       rocm_package_version: ${{ steps.rocm_package_version.outputs.rocm_package_version }}
     steps:
-      - name: Validate inputs
-        run: |
-          if [[ -n "${{ inputs.repository_override }}" && "${{ inputs.external_source_checkout }}" != "true" ]]; then
-            echo "ERROR: repository_override can only be used when external_source_checkout is true"
-            exit 1
-          fi
-
-      - name: Checkout ${{ inputs.repository_override || github.repository }}
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          repository: ${{ inputs.repository_override || github.repository }}
-          path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
-          fetch-depth: 2
-
-      - name: Checkout TheRock (external)
-        if: ${{ inputs.external_source_checkout }}
+      - name: Checkout TheRock
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: ROCm/TheRock
-          path: TheRock
           ref: ${{ inputs.therock_ref || github.ref }}
+          fetch-depth: 2
 
       - name: Set PR_LABELS variable with labels assigned to pull request
-        if: ${{ github.event.pull_request }} # only set PR labels var if this is a pull request
+        if: ${{ github.event.pull_request }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
           PR_NUMBER: ${{ github.event.number }}
@@ -137,20 +122,11 @@ jobs:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
           GITHUB_REPOSITORY_OVERRIDE: ${{ inputs.repository_override }}
           PROJECTS: ${{ inputs.projects }}
+          EXTERNAL_SOURCE_CHECKOUT: ${{ inputs.external_source_checkout }}
         run: |
-          if [[ "${{ inputs.external_source_checkout }}" == "true" ]]; then
-            cd source-repo
-            python ../TheRock/build_tools/github_actions/configure_ci.py
-          else
-            ./build_tools/github_actions/configure_ci.py
-          fi
+          ./build_tools/github_actions/configure_ci.py
 
       - name: Compute package version
         id: rocm_package_version
         run: |
-          if [[ "${{ inputs.external_source_checkout }}" == "true" ]]; then
-            # Use ADHOCBUILD for external repos to avoid building Python packages
-            echo "rocm_package_version=ADHOCBUILD" >> $GITHUB_OUTPUT
-          else
-            python ./build_tools/compute_rocm_package_version.py --release-type=dev
-          fi
+          python ./build_tools/compute_rocm_package_version.py --release-type=dev
