--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -92,26 +92,27 @@ jobs:
       TEATIME_FORCE_INTERACTIVE: 0
       AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
       IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
-      THEROCK_DIR: ${{ inputs.external_source_checkout && 'tr' || '.' }}
+      # Environment variables for fetch_sources.py to handle external repo overrides
+      EXTERNAL_SOURCE_CHECKOUT: ${{ inputs.external_source_checkout }}
+      EXTERNAL_SOURCE_TEMP_PATH: ${{ inputs.external_source_checkout && '.external-source-temp' || '' }}
     steps:
       - name: Configure GitHub longpath
         run: |
           git config --global core.longpaths true
 
-      - name: "Checking out repository"
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          repository: ${{ inputs.repository_override || github.repository }}
-          path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
-
       - name: Checkout TheRock repository
-        if: ${{ inputs.external_source_checkout }}
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: "ROCm/TheRock"
-          # Use short path name to avoid Windows MAX_PATH issues. Keep consistent with Linux.
-          path: tr
-          ref: ${{ inputs.therock_ref || 'main' }}
+          ref: ${{ inputs.therock_ref || github.ref }}
+
+      # For external repos (rocm-libraries, rocm-systems), checkout the source repository.
+      # fetch_sources.py will move this to the appropriate submodule directory.
+      - name: Checkout external source repository
+        if: ${{ inputs.external_source_checkout }}
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          path: .external-source-temp
 
       - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
@@ -119,12 +120,7 @@ jobs:
 
       - name: Install python deps
         run: |
-          pip install -r $THEROCK_DIR/requirements.txt
-
-      - name: Detect external source configuration
-        if: ${{ inputs.external_source_checkout }}
-        id: detect
-        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py --repository "${{ inputs.repository_override || github.repository }}" --platform windows
+          pip install -r requirements.txt
 
       - name: Install requirements
         # The first two lines removes the default commmunity feed and uses the internal proxy feed
@@ -152,10 +148,9 @@ jobs:
       - name: Runner health status
         run: |
           ccache --zero-stats
-          python $THEROCK_DIR/build_tools/health_status.py
+          python build_tools/health_status.py
 
       - name: Adjust git config
-        working-directory: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
         run: |
           git config fetch.parallel 10
           git config --global core.symlinks true
@@ -170,46 +165,31 @@ jobs:
           restore-keys: |
             windows-build-packages-v4-${{ inputs.amdgpu_families }}-
 
-      - name: Fetch sources
-        timeout-minutes: 30
-        run: |
-          python $THEROCK_DIR/build_tools/fetch_sources.py --jobs 12 ${{ steps.detect.outputs.fetch_exclusion || '' }}
-
-      - name: DVC pull (external repos only)
-        if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_dvc == 'true' }}
-        working-directory: source-repo
-        run: dvc pull
-
-      - name: Patch external repo
-        if: ${{ inputs.external_source_checkout }}
-        working-directory: source-repo
-        run: |
-          # Apply patches from TheRock to the external repo
-          PATCHES_DIR="../$THEROCK_DIR/patches/amd-mainline/${{ steps.detect.outputs.patches_dir }}"
-          if [ -d "$PATCHES_DIR" ] && [ "$(ls -A $PATCHES_DIR/*.patch 2>/dev/null)" ]; then
-            git -c user.name="therockbot" -c "user.email=therockbot@amd.com" \
-              am --whitespace=nowarn $PATCHES_DIR/*.patch
-          else
-            echo "No patches found in $PATCHES_DIR or directory doesn't exist"
-          fi
-
       - name: Test build_tools
-        if: ${{ !inputs.external_source_checkout }}
         run: |
           python -m pytest build_tools/tests build_tools/github_actions/tests
+
+      - name: Detect external source configuration
+        if: ${{ inputs.external_source_checkout }}
+        id: detect
+        run: python3 build_tools/github_actions/detect_external_repo_config.py --repository "${{ inputs.repository_override || github.repository }}" --platform windows
+
+      - name: Fetch and prepare all sources
+        timeout-minutes: 30
+        run: |
+          python build_tools/fetch_sources.py --jobs 12 ${{ steps.detect.outputs.fetch_exclusion || '' }}
 
       - name: Configure Projects
         env:
           cmake_preset: ${{ inputs.build_variant_cmake_preset }}
           amdgpu_families: ${{ inputs.amdgpu_families }}
           package_version: ${{ inputs.package_version }}
-          extra_cmake_options: >-
-            ${{ inputs.external_source_checkout && format('-D{0}=../source-repo', steps.detect.outputs.cmake_source_var) || '' }}
-            ${{ inputs.extra_cmake_options }}
+          extra_cmake_options: ${{ inputs.extra_cmake_options }}
+          GITHUB_REPOSITORY_OVERRIDE: ${{ inputs.repository_override }}
         run: |
           # clear cache before build and after download
           ccache -z
-          python3 $THEROCK_DIR/build_tools/github_actions/build_configure.py
+          python3 build_tools/github_actions/build_configure.py
 
       - name: Build therock-archives and therock-dist
         run: cmake --build "${{ env.BUILD_DIR }}" --target therock-archives therock-dist -- -k 0
@@ -259,12 +239,8 @@ jobs:
 
       - name: Post Build Upload
         if: always()
-        # For external repos we set the working directory to TheRock so the packaging/upload
-        # runs from the same repo root as internal CI. This keeps produced tarball layouts and
-        # paths consistent across internal vs external-source builds.
-        working-directory: ${{ inputs.external_source_checkout && env.THEROCK_DIR || '.' }}
         run: |
-          python3 ./build_tools/github_actions/post_build_upload.py \
+          python3 build_tools/github_actions/post_build_upload.py \
             --run-id ${{ github.run_id }} \
             --artifact-group ${{ inputs.artifact_group }} \
             --build-dir ${{ env.BUILD_DIR }} \
