--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -143,10 +143,6 @@ jobs:
   build_windows_python_packages:
     needs: [build_windows_artifacts]
     name: Build Python
-    # If the dependent job failed/cancelled, this job will not be run
-    # The use_prebuilt_artifacts "or" statement ensures that tests will run if
-    # previous build step is run or skipped.concurrency.
-    # Skip for external repos (they don't need Python packages)
     if: >-
       ${{
         !failure() &&
@@ -155,8 +151,7 @@ jobs:
           inputs.use_prebuilt_artifacts == 'false' ||
           inputs.use_prebuilt_artifacts == 'true'
         ) &&
-        inputs.expect_failure == false &&
-        inputs.external_source_checkout == false
+        inputs.expect_failure == false
       }}
     uses: ./.github/workflows/build_windows_python_packages.yml
     with:
