Remove BUILD_PATH variable in Linux build workflow.

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -173,23 +173,22 @@ jobs:
         if: ${{ !cancelled() }}
         shell: bash
         run: |
-          BUILD_PATH="build"
-          if [ -d "${BUILD_PATH}" ]; then
+          if [ -d "build" ]; then
             echo "Full SDK du:"
             echo "------------"
-            du -h -d 1 ${BUILD_PATH}/dist/rocm
+            du -h -d 1 build/dist/rocm
             echo "Artifact Archives:"
             echo "------------------"
-            ls -lh ${BUILD_PATH}/artifacts/*.tar.xz
+            ls -lh build/artifacts/*.tar.xz
             echo "Artifacts:"
             echo "----------"
-            du -h -d 1 ${BUILD_PATH}/artifacts
+            du -h -d 1 build/artifacts
             echo "CCache Stats:"
             echo "-------------"
             ccache -s -v
-            tail -v -n +1 .ccache/compiler_check_cache/* > ${BUILD_PATH}/logs/ccache_compiler_check_cache.log
+            tail -v -n +1 .ccache/compiler_check_cache/* > build/logs/ccache_compiler_check_cache.log
           else
-            echo "[ERROR] Build directory ${BUILD_PATH} does not exist. Skipping report!"
+            echo "[ERROR] Build directory build does not exist. Skipping report!"
             echo "        This should only happen if the CI is cancelled before the build step."
             exit 1
           fi
